--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "prepare": "husky"
+    "prepare": "husky",
+    "db:push": "drizzle-kit push:pg --config=drizzle.config.ts",
+    "db:studio": "npx drizzle-kit studio"
   },
   "lint-staged": {
     "**/*": "prettier --write --ignore-unknown"
@@ -17,9 +19,12 @@
     "@radix-ui/react-slot": "^1.0.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "drizzle-orm": "^0.30.8",
     "lucide-react": "^0.367.0",
     "next": "14.1.4",
     "next-themes": "^0.3.0",
+    "pg": "^8.11.5",
+    "postgres": "^3.4.4",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.2.2",
@@ -30,6 +35,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
+    "drizzle-kit": "^0.20.14",
     "eslint": "^8",
     "eslint-config-next": "14.1.4",
     "husky": "^9.0.11",
