--- a/.env.sample
+++ b/.env.sample
@@ -1,1 +1,3 @@
 DATABASE_URL="link-to-your-database"
+GOOGLE_CLIENT_ID="Add-your-client-id-here"
+GOOGLE_CLIENT_SECRET="Add-your-client-secret-here"
