--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "**/*": "prettier --write --ignore-unknown"
   },
   "dependencies": {
+    "@auth/drizzle-adapter": "^0.9.0",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-slot": "^1.0.2",
     "class-variance-authority": "^0.7.0",
@@ -22,6 +23,7 @@
     "drizzle-orm": "^0.30.8",
     "lucide-react": "^0.367.0",
     "next": "14.1.4",
+    "next-auth": "^4.24.7",
     "next-themes": "^0.3.0",
     "pg": "^8.11.5",
     "postgres": "^3.4.4",
